# telegram_support_bot

./: .gitignore  README.MD  config.py  create_bot.py  keyboard.py  main.py  message.py  my_bot_database.db  pyproject.toml
db/: database.py
handlers/: bonus.py  broadcasting.py  q_and_store.py  statistics.py
utils/: date_parser.py  phone_parser.py  resender.py  username_parser.py
